force-app/main/default/objects/Teacher_Class_Student__c/Teacher_Class_Student__c.object-meta.xml
<CustomObject>
    <label>Teacher Class Subject</label>
    <nameField>
        <label>Teacher Class Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teacher Class Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>