force-app/main/default/objects/Teacher_Class_Student__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipName>Teacher_Class_Students</relationshipName>
    <type>Lookup</type>
</CustomField>